--- a/uploadgiveaway.html
+++ b/uploadgiveaway.html
@@ -6,12 +6,12 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="addrules.js" charset="utf-8"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
-
 
   <body>
 
@@ -33,11 +33,39 @@
 
         </div>
 
-        <div class="col-10 mt-3">
+
+
+        <div class="col-8 mt-3" >
 
             <input type="file" name="img" multiple placeholder="Upload Image" class="form-control-file-width "><br>
             <textarea rows="4" cols="85" class="mt-2" placeholder="Description"></textarea><br>
-            <textarea rows="4" cols="85" class="mt-2" placeholder="Rules"></textarea>
+
+            <div class="rule-list mt-3">
+
+            <input type="text" name="rules" value="" placeholder="Rules" class="textfield">
+            <button type="button" class="btn btn-success btn-add-rules"><span class="glyphicon glyphicon-plus"></span> Add Rules</button>
+
+            </div>
+
+            <script>
+            $(document).ready(function(){
+              var max_fields_limit      = 8; //set limit for maximum input fields
+              var x = 1; //initialize counter for text box
+                $('.btn-add-rules').click(function(e){ //click event on add more fields button having class add_more_button
+                    e.preventDefault();
+                      if(x < max_fields_limit){ //check conditions
+                        x++; //counter increment
+                        $('.rule-list').append('<div><input type="text" name="rules" class="mt-2" placeholder="Rules"/><button type="button" class="btn btn-danger remove_field ml-1"><span class="glyphicon glyphicon-plus"></span>Remove</button>'); //add input field
+                      }
+                    });
+
+                    $('.rule-list').on("click",".remove_field", function(e){ //user click on remove text links
+                      e.preventDefault(); $(this).parent('div').remove(); x--;
+
+                    })
+            });
+
+            </script>
 
             <div class="text-center mt-3">
 
@@ -47,6 +75,11 @@
             </div>
 
         </div>
+
+        <div class="col-2">
+
+        </div>
+
           </form>
       </div>
 
