--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <a href="uploadgiveaway.html">upload giveaway</a>
     <a href="generatewinner.html">generate winner</a>
     <a href="login.html">login</a>
+    <a href="description.html">description</a>
   </body>
 </html>
